--- a/frontend-admin/src/styles/Common.css
+++ b/frontend-admin/src/styles/Common.css
@@ -11,4 +11,18 @@ body {
     background-color: #ffffff;
   }
 
-
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .register {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  .main-content {
+    flex: 1;
+  }
