--- a/frontend-admin/src/styles/CategoryList.css
+++ b/frontend-admin/src/styles/CategoryList.css
@@ -1,5 +1,5 @@
 .table-content{
-  margin-right: 200px;
+  margin-right: 100px;
 }
 
 table {    
@@ -15,3 +15,25 @@ table {
   th {
     background-color: #f2f2f2;
   }
+
+  .edit-button {
+    margin-right: 20px;
+    background-color: #28a745;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    height: 30px;
+    cursor: pointer;
+  }
+  
+  .delete-button {
+    background-color: #dc3545;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    height: 30px;
+    cursor: pointer;
+  }
+  
