--- a/frontend-admin/src/styles/Structure.css
+++ b/frontend-admin/src/styles/Structure.css
@@ -4,11 +4,15 @@
   }
 
 .sidebar-section {
-    flex: 1;
+    flex: 0.5;
     display: flex;
     flex-direction: column;
   }
 
 .content{
     flex: 2;        
+}
+
+h1{
+  color: #0a2f6e; 
 }
