--- a/frontend-admin/src/styles/EditProduct.css
+++ b/frontend-admin/src/styles/EditProduct.css
@@ -39,8 +39,8 @@
     margin-right: 0;
 }
 
-.product-button {
-    margin-top: 20px;
-    background-color: #0A2F6E;
-    color: white;
+.product-buttons {
+    display: flex; 
+    gap: 10px;
+    margin-top: 10px;
 }
