--- a/frontend-admin/src/styles/AddProducts.css
+++ b/frontend-admin/src/styles/AddProducts.css
@@ -2,60 +2,65 @@ h1{
     color: #0a2f6e;    
 }
 
-.upload-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 500px;
-    height: 200px;
-    border: 2px dashed #ccc;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: #f8f8f8;
+.form-section {
+  max-width: 1100px;
 }
 
-#fileElem{
-    display: none;
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
-.uploadimg{
-    width: 48px;
-    height: 48px;
+.row-1{
+  display: flex;
+  width: 100%;
+  gap: 10px;
 }
 
-span{
-    margin-top: 8px;
-    color: #666;
+.row-1 .form-group {
+  flex: 1;
 }
 
-.image-previews {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  
-  .image-preview-container {
-    position: relative;
-  }
-  
-  .image-preview {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .remove-image-button {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    background: rgba(255, 255, 255, 0.7);
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 16px;
-    line-height: 1;
-    padding: 2px 5px;
-  }
+.row-3{
+  display: flex;
+  width: 100%;
+  gap: 10px;
+}
+
+.row-3 .form-group {
+  flex: 1;
+}
+
+.image-preview-container {
+  position: relative;
+  margin-top: 10px;
+}
+
+.image-preview {
+  width: auto;
+  height: 200px;
+  object-fit: cover;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.remove-image-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: rgba(255, 255, 255, 0.7);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1;
+  padding: 2px 5px;
+}
+
+.form-button {
+  grid-column: span 2;
+  justify-self: center;
+  margin-top: 20px;
+}
