--- a/frontend-admin/src/styles/AddProducts.css
+++ b/frontend-admin/src/styles/AddProducts.css
@@ -11,6 +11,7 @@ h1{
   flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 20px;
+  width: 1100px;
 }
 
 .row-1{
@@ -63,4 +64,5 @@ h1{
   grid-column: span 2;
   justify-self: center;
   margin-top: 20px;
+  width: 200px;
 }
