feat: rename class for main contact content to improve clarity and maintainability

--- a/frontend-customers/src/styles/Contact.css
+++ b/frontend-customers/src/styles/Contact.css
@@ -67,7 +67,7 @@
 }
 
 @media (max-width: 1024px) {
-    .main-content {
+    .main-contact-content {
         flex-direction: column;
         margin: 2%; 
         align-items: center;
@@ -85,7 +85,7 @@
 }
 
 @media (max-width: 768px) {
-    .main-content {
+    .main-contact-content {
         margin: 1%; 
     }
 
@@ -105,7 +105,7 @@
 }
 
 @media (max-width: 480px) {
-    .main-content {
+    .main-contact-content {
         margin: 0; 
     }
 
