feat: update class names for AboutUs, HomePage, SignIn, and SignUp components to improve clarity and maintainability

--- a/frontend-customers/src/styles/SignIn.css
+++ b/frontend-customers/src/styles/SignIn.css
@@ -5,7 +5,7 @@
     background-color: #ffffff;
 }
   /* Main Content Styles */
-  .main-content {
+  .main-signin-content {
     flex-grow: 1; /* Allow the main content to expand */
     display: flex;
     flex-wrap: wrap;
@@ -103,53 +103,11 @@ input:invalid + .error-message {
   cursor: pointer;
   height: 50px;
   width: 30%;
-}
-  
-/* .form-section {
-    flex: 2;
-    max-width: 500px;
-    text-align: left;
-    margin-right: 3%;
-    margin-top: 4%;
-    margin-right: 5%;
-    align-items: center;
-}
- 
-  .form-button {
-    background-color: #0A2F6E !important;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    height: 50px;
-  }
-  
-  .google-signup {
-    display: flex;
-    align-items: center;  
-    justify-content: center;
-    gap: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    height: 30px;
-  }
-  
-  .login-prompt {
-    text-align: center;
-  }
-  
-  .login-link {
-    color: #0A2F6E;
-    text-decoration: none;
-  }
-   */  
+}  
 
 /* Media Queries for Responsiveness */
 @media (max-width: 1024px) {
-    .main-content {
+    .main-signin-content {
       flex-direction: column;
       align-items: center;
       padding: 20px;
