feat: add comments section to product view with fetching functionality

--- a/frontend-customers/src/styles/ViewProduct.css
+++ b/frontend-customers/src/styles/ViewProduct.css
@@ -288,6 +288,11 @@
   color: #666;
 }
 
+.product-comments {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 @media (max-width: 1024px) {
   .product-content-container {
     flex-direction: column;
